# nworks_mail_reader

./: .gitignore  README.md  main.py  pyproject.toml
src/nworks_mail_mcp/: config.py  imap_client.py  index_sync.py  mail_index.py  redaction.py  server.py  state.py
tests/: test_imap_client.py  test_index_sync.py  test_mail_index.py  test_redaction.py  test_server.py  test_state.py
